--- a/src/styles/pages/SettingPage.scss
+++ b/src/styles/pages/SettingPage.scss
@@ -1,7 +1,7 @@
 .setting {
   width: 100vw;
   height: 100vh;
-  padding: 3rem;
+  padding: 5rem 3rem;
   display: flex;
   justify-content: flex-start;
   align-items: flex-start;
@@ -74,7 +74,7 @@
   }
   .version {
     position: absolute;
-    bottom: 2rem;
+    bottom: 3rem;
     padding: 1rem;
     font-size: .8rem;
     color: #b0b0b0;
