--- a/src/styles/pages/Mode.scss
+++ b/src/styles/pages/Mode.scss
@@ -2,12 +2,78 @@
   width: 100vw;
   height: 100vh;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .mode {
     width: 100%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+}
+.loading {
+  animation: fade-in 8s forwards;
+  position: absolute;
+  z-index: -1;
+  width: 4rem;
+  height: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateX(-40%);
+  .dots {
+    li {
+      position: absolute;
+      width: 1.2rem;
+      height: 1.2rem;
+      border-radius: 50%;
+      &:nth-child(1) {
+        background: #d0a884;
+        animation: load02 2s linear infinite;
+        animation-delay: 1s;
+      }
+      &:nth-child(2) {
+        background: #ceae95;
+        animation: load02 2s linear infinite;
+        animation-delay: 0s;
+      }
+      &:nth-child(3) {
+        background: #d0a884;
+        animation: load01 2s linear infinite;
+        animation-delay: 1s;
+      }
+    }
+  }
+  @keyframes load01 {
+    0% {
+      opacity: 1;
+      transform: translate(0 0);
+    }
+    49.99% {
+      opacity: 1;
+      transform: translate(2rem, 0);
+    }
+    50% {
+      opacity: 0;
+      transform: translate(2rem, 0);
+    }
+    100% {
+      opacity: 0;
+      transform: translate(0, 0);
+    }
+  }
+  @keyframes load02 {
+    0% {
+      transform: translate(0, 0);
+    }
+    50% {
+      transform: translate(2rem, 0);
+    }
+    100% {
+      transform: translate(0, 0);
+    }
   }
 }
 .end_btn {
@@ -22,6 +88,8 @@
   opacity: 0.5;
 }
 .welcome {
+  position: absolute;
+  z-index: 10;
   animation: fade-in 2s forwards;
   width: 100vw;
   height: 100vh;
@@ -30,6 +98,7 @@
   align-items: center;
   flex-direction: column;
   gap: 4rem;
+  background-color: #fff;
   cursor: pointer;
   h1 {
     font-size: 6rem;
@@ -41,7 +110,6 @@
   .slider {
     opacity: 0.2;
     position: absolute;
-    z-index: -1;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -65,6 +133,7 @@
 
 .camera {
   animation: fade-in 2s forwards;
+  z-index: 10;
   width: 100%;
   height: 100%;
   overflow: hidden;
