--- a/src/styles/pages/Mode.scss
+++ b/src/styles/pages/Mode.scss
@@ -198,6 +198,7 @@
 }
 
 .preview {
+  z-index: 10;
   animation: fade-in 4s forwards;
   width: 100%;
   height: 100%;
@@ -206,6 +207,7 @@
   justify-content: center;
   align-items: center;
   overflow: hidden;
+  background-color: #fff;
   .image-wrapper {
     position: absolute;
     width: 100%;
@@ -275,6 +277,8 @@
   align-items: center;
   flex-direction: column;
   gap: 4rem;
+  background-color: #fff;
+  z-index: 10;
   cursor: pointer;
   h2 {
     font-size: 3.75rem;
