--- a/src/styles/pages/Mode.scss
+++ b/src/styles/pages/Mode.scss
@@ -300,6 +300,7 @@
 .card {
   animation: fade-in 2s forwards;
   position: absolute;
+  z-index: 30;
   box-shadow: 0px 4px 8px rgba($color: #000, $alpha: 0.3);
   canvas {
     width: 400px;
