--- a/src/styles/pages/Mode.scss
+++ b/src/styles/pages/Mode.scss
@@ -14,6 +14,7 @@
   }
 }
 .loading {
+  opacity: 0.5;
   animation: fade-in 8s forwards;
   position: absolute;
   z-index: -1;
@@ -132,7 +133,7 @@
 }
 
 .camera {
-  animation: fade-in 2s forwards;
+  // animation: fade-in 2s forwards;
   z-index: 10;
   width: 100%;
   height: 100%;
@@ -199,7 +200,7 @@
 
 .preview {
   z-index: 10;
-  animation: fade-in 4s forwards;
+  // animation: fade-in 4s forwards;
   width: 100%;
   height: 100%;
   position: absolute;
