--- a/src/styles/pages/Mode.scss
+++ b/src/styles/pages/Mode.scss
@@ -43,7 +43,8 @@
     font-family: "Sedan SC", serif;
     letter-spacing: 1rem;
     text-align: center;
-    animation: breath 5s infinite;
+    opacity: 0.9;
+    animation: breath 7s infinite;
   }
   .slider {
     opacity: 0.2;
