--- a/src/styles/animations/_animations.scss
+++ b/src/styles/animations/_animations.scss
@@ -1,12 +1,12 @@
 @keyframes breath {
   0% {
-    opacity: 1;
+    scale: 1;
   }
   50% {
-    opacity: 0;
+    scale: 0.95;
   }
   100% {
-    opacity: 1;
+    scale: 1;
   }
 }
 
