--- a/src/styles/pages/Mode.scss
+++ b/src/styles/pages/Mode.scss
@@ -67,7 +67,6 @@
       }
     }
   }
-
 }
 
 .camera {
@@ -237,11 +236,16 @@
 }
 
 .card {
+  width: 50%;
+  height: 100%;
   animation: fade-in 2s forwards;
   position: absolute;
   z-index: 30;
-  box-shadow: 0px 4px 8px rgba($color: #000, $alpha: 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   canvas {
-    width: 600px;
+    scale: 1.7;
+    box-shadow: 0px 4px 8px rgba($color: #000, $alpha: 0.3);
   }
 }
